adapting magritte builder to tara 1.3.0